--- a/frontend/chat-client/src/Components/Home/Home.css
+++ b/frontend/chat-client/src/Components/Home/Home.css
@@ -1,4 +1,4 @@
-body {
+/* body {
 	background-color: #282c35;
 	color: #fff;
 }
@@ -42,4 +42,4 @@ h2 {
 .btn:hover {
 	background: #000;
 	color: #fff;
-}
+} */
